<resources>

    <string-array name="language_options">
        <item>System Default</item>
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="language_values">
        <item>default</item>
        <item>en</item>
        <item>fr</item>
    </string-array>

    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="app_info">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="default_web_client_id" translatable="false">821584108171-ghfjc0k77d7s1fba3lksjke0pr9sg09h.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile_picture">Profile picture</string>
    <string name="restaurant_background_desc">Restaurant background image</string>
    <string name="app_logo_desc">Bowl-shaped app logo</string>
    <string name="google_logo_desc">Google logo</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="error_loading_restaurants">Error loading restaurant data. Please try again later.</string>
    <string name="workmate_photo_desc">Workmate photo description</string>
    <string name="restaurant_image_desc">Restaurant picture</string>
    <string name="lunch_found_today">Lunch found for today:</string>
    <string name="no_lunch_found_today">No lunch found for the user today.</string>
    <string name="post_notifications_permission_denied">POST_NOTIFICATIONS permission not granted, notification not sent.</string>
    <string name="google_sign_in_failed">Google Sign-In failed</string>
    <string name="notification_channel_name">Lunch Notifications</string>
    <string name="notification_channel_description">Notifications for lunch selections</string>
    <string name="unknown_user_position">User position unknown.</string>
    <string name="permission_post_notifications_denied">POST_NOTIFICATIONS permission not granted, notification not sent.</string>
    <string name="lunch_reminder_title">Lunch Reminder</string>
    <string name="lunch_notification_content">Today’s Lunch: %1$s</string>
    <string name="lunch_notification_big_text">Today’s Lunch: %1$s at %2$s with %3$s</string>
    <string name="notification_sent_log">Notification sent for the restaurant: %1$s</string>
    <string name="lunch_count">"Lunch count: %d"</string>
    <string name="search">Search</string>
    <string name="search_hint">Search restaurants</string>
    <string name="sort">Sort</string>
    <string name="sort_by_proximity">Sort by proximity</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_name_asc">Sort by name (A-Z)</string>
    <string name="sort_by_name_desc">Sort by name (Z-A)</string>
    <string name="no_restaurant_selected">%1$s has not selected a restaurant</string>
    <string name="is_eating_at">%1$s is eating at %2$s</string>
    <string name="settings_title">Settings</string>
    <string name="language_title">Language</string>
    <string name="language_summary">Select your preferred language</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Enable or disable notifications</string>
    <string name="notification_time">Notification Time</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="turn_on_off_lunch_notifications">Turn on/off lunch notifications</string>
    <string name="notification_title">Lunch Reminder</string>
    <string name="notification_content">Today at %1$s</string>
    <string name="notification_big_text">Restaurant: %1$s\nAddress: %2$s\nColleagues: %3$s</string>
    <string name="address_not_available">Address not available</string>
    <string name="visit_website">Visit Website</string>
    <string name="rating_not_available">Rating not available</string>
    <string name="phone_not_available">Phone not available</string>
    <string name="website_not_available">Website not available</string>
    <string name="opening_hours_not_available">Opening hours not available</string>
    <string name="lunch_updated">Lunch updated for the selected date</string>
    <string name="user_not_connected">User not connected</string>
    <string name="no_colleague_chose_restaurant">No colleague chose this restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="like">Like</string>
    <string name="opening_hours">Opening hours:</string>
    <string name="add_lunch">Add to Lunch</string>
    <string name="joining_workmates">Joining Workmates:</string>
</resources>