<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_distance"
                android:title="@string/sort_by_proximity" />
            <item
                android:id="@+id/sort_by_stars"
                android:title="@string/sort_by_rating" />
            <item
                android:id="@+id/sort_a_to_z"
                android:title="@string/sort_by_name_asc" />
            <item
                android:id="@+id/sort_z_to_a"
                android:title="@string/sort_by_name_desc" />
        </menu>
    </item>
</menu>