<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/restaurant_background_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/grey_glass" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/app_name"
        android:textSize="37sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/text_white" />

    <ImageView
        android:id="@+id/nav_header_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/profile_picture"
        android:contentDescription="@string/profile_picture"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:layout_margin="18dp"
        android:background="@drawable/round_profile_picture_background" />

    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nav_header_image"
        android:layout_alignTop="@id/nav_header_image"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nav_header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nav_header_image"
        android:layout_below="@id/nav_header_title"
        android:text="@string/email"
        android:textColor="@android:color/white"/>
</RelativeLayout>
