<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_glass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="70sp"
            android:textStyle="bold"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="12sp"
            android:textStyle="italic|bold"
            android:textColor="@color/text_white" />

        <RelativeLayout
            android:id="@+id/google_sign_in_button"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/button_background"
            android:padding="20dp">

            <ImageView
                android:id="@+id/button_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/google_logo" />

            <TextView
                android:id="@+id/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button_logo"
                android:gravity="center"
                android:text="@string/sign_in_google"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>